--- a/yesterday.html
+++ b/yesterday.html
@@ -37,4 +37,4 @@ function(t){return"https://www.cnn.com/world/live-news/"+
  *
  * @return {String} last component of the article URL
  */
-function(t){return"coronavirus-pandemic-"+String(t.getMonth()+1).padStart(2,"0")+"-"+String(t.getDate()).padStart(2,"0")+"-20/"}(t)}(function(){const t=new Date(Date.now());return t.setDate(t.getDate()-1),t}())}();</script></html>
+function(t){return"coronavirus-pandemic-intl-"+String(t.getMonth()+1).padStart(2,"0")+"-"+String(t.getDate()).padStart(2,"0")+"-20/"}(t)}(function(){const t=new Date(Date.now());return t.setDate(t.getDate()-1),t}())}();</script></html>
