deploy: d8489fdede21876692efb6c09826b3bfd419e9c2

--- a/today.html
+++ b/today.html
@@ -23,7 +23,7 @@
  */
 // Copyright 2020, Ryan Pavlik <ryan.pavlik@gmail.com>
 // SPDX-License-Identifier: MIT
-window.location="https://www.cnn.com/world/live-news/"+function(t){return["coronavirus-pandemic-intl",String(t.getMonth()+1).padStart(2,"0"),String(t.getDate()).padStart(2,"0"),"20"].join("-")}
+window.location="https://www.cnn.com/world/live-news/"+function(t){return["coronavirus-pandemic",String(t.getMonth()+1).padStart(2,"0"),String(t.getDate()).padStart(2,"0"),"20-intl"].join("-")}
 /** Get a Date for today.
  * @return {Date}
 */(new Date(Date.now()))+"/"}();</script></html>
